# planets

./: .gitmodules  CMakeLists.txt  README.md  test.gitmodules
assets/models/: cogship.ubj  cube.ubj  house.ubj  pine.ubj
assets/textures/: cogship.dds  house.dds  noise.dds  pine_tree.dds  tc_foam.dds  tc_grass.dds  tc_grass_dead.dds  tc_rock.dds  tc_rock2.dds  tc_rock2_normal.dds  tc_rock_normal.dds  tc_sand.dds  tc_sand_normal.dds
assets/textures/space_cubemap/: back.dds  bottom.dds  front.dds  left.dds  right.dds  top.dds
assets/textures/sun/: flare0.dds  flare1.dds  flare3.dds  flare4.dds  flare5.dds  sun.dds
include/: planets.hpp
shaders/: atmosphere.frag  atmosphere.vert  building.frag  building.vert  building_ghost.frag  building_ghost.vert  clouds.frag  clouds.vert  earth.frag  earth.vert  earth_atmosphere.frag  earth_atmosphere.vert  flare.frag  normaltest.frag  path.frag  path.vert  phong.frag  phong.vert  planet.frag  post_processing.frag  post_processing.vert  ship.frag  ship.vert  ship_wake.frag  ship_wake.vert  space_box.frag  space_box.vert  sun.frag  sun.vert  sun_and_flare.vert  terrain.frag  terrain.vert  terrain_caustics.frag  terrain_caustics.vert  test.vert  tree.frag  tree.vert  underwater.frag  underwater.vert  water.frag  (+3 more)
src/: main.cpp  scene.cpp  scene.hpp
src/common/: land_mass.cpp  land_mass.hpp  maneuver.hpp  orbital_mass.cpp  orbital_mass.hpp  planet.cpp  planet.hpp  space_craft.hpp  spacecraft.hpp  sun.cpp  sun.hpp  universe.cpp  universe.hpp
src/entities/: entity.cpp  entity.hpp  space_craft.cpp  space_craft.hpp
src/geometry/: cubesphere.cpp  cubesphere.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  model_instance.h  skinned_mesh.cpp  skinned_mesh.hpp  sphere.cpp  sphere.hpp  terrain_face.cpp  terrain_face.hpp
src/graphics/: camera.cpp  camera.hpp  cube_map.cpp  cube_map.hpp  frame_buffer.cpp  frame_buffer.hpp  gl_error.cpp  gl_error.hpp  renderable.cpp  renderable.hpp  shader.cpp  shader.hpp  tangent_calculator.cpp  tangent_calculator.hpp  texture.cpp  texture.hpp  texture_array.cpp  texture_array.hpp  vert_attributes.cpp  vert_attributes.hpp  vert_buffer.cpp  vert_buffer.hpp  vert_data.hpp  window_size.cpp  window_size.hpp
src/graphics/controls/: flying_camera.cpp  flying_camera.hpp  planet_camera.cpp  planet_camera.hpp  trackball_camera.cpp  trackball_camera.hpp
src/graphics/input/: key_input.cpp  mouse_input.cpp  mouse_input.hpp
src/graphics/renderers/: atmosphere_renderer.cpp  atmosphere_renderer.hpp  cloud_renderer.cpp  cloud_renderer.hpp  lines.cpp  lines.hpp  path_renderer.cpp  path_renderer.hpp  phong.cpp  phong.hpp  planet_renderer.cpp  planet_renderer.hpp  post_processing.cpp  post_processing.hpp  render_type.hpp  renderer.cpp  renderer.hpp  shadow_renderer.cpp  shadow_renderer.hpp  space_renderer.cpp  space_renderer.hpp  sun_renderer.cpp  sun_renderer.hpp  terrain_renderer.cpp  terrain_renderer.hpp  underwater_renderer.cpp  underwater_renderer.hpp  water_renderer.cpp  water_renderer.hpp
src/rendering/: camera.cpp  camera.hpp
src/utils/: dds_image.h  gl_error.cpp  math_utils.h  obb.cpp  obb.hpp  orbital_utils.h  quad_renderer.h  resource_manager.cpp  resource_manager.hpp  serialization.h  shader.cpp  shader.hpp  texture.cpp  texture.hpp  unit_utils.h  window_size.cpp  window_size.hpp
src/utils/camera/: flying_camera.cpp  flying_camera.hpp  planet_camera.cpp  planet_camera.hpp
src/utils/file/: file.cpp
src/utils/generation/: earth_generator.cpp  earth_generator.h  landmass_generator.cpp  landmass_generator.h  landmass_outliner.cpp  landmass_outliner.h  landmass_shape_generator.cpp  landmass_shape_generator.h  planet_generator.cpp  planet_generator.h  planet_generator.hpp
src/utils/input/: key_input.hpp  mouse_input.cpp
transfercalculator/: core.js  planets.js
